docs/index.css
/* include comic font */
@font-face {
    font-family: Bangers;
    font-style: normal;
    font-weight: 400;
    src: url(assets/fonts/Bangers-Regular.ttf);
}

/* Make map fullscreen. bg white */
#map,
body,
html {
    width: 100vw;
    height: 100%;
    background: #fff;
    z-index: 1;
    margin: 0;
    padding: 0;
}

/* no scrollbar */
body,
html {
    position: fixed;
    overflow: hidden;
}

/* overlays on top, blur bg, fullscreen, animate changes */
.overlay {
    position: fixed;
    width: 100%;
    height: 100%;
    bottom: 0;
    left: 0;
    z-index: 5;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgba(0, 0, 0, .85);
    transition: .3s;
    overflow-y: hidden
}

/* Align content in center */
.overlay .overlay-content {
    text-align: center;
    margin-top: 30px;
    display: flex;
    align-items: center;
    flex-direction: column
}

/* overlay specific style */
#menu-overlay {
    background-color: rgba(0, 0, 0, .95);
    bottom: 100%;
    /* scroll in from the top */
}

#mp-players {
    /* to add some space after the player list */
    margin: 0 6px 6px;
    padding: 0 8px 8px;
}

.overlay button,
.overlay-content,
.overlay-input,
.overlay-select {
    margin: 0 6px 6px;
    padding: 0 8px 8px;
    text-decoration: none;
    text-transform: uppercase;
    font-size: 36px;
    color: #818181;
    display: block;
    transition: .3s;
    font-family: Bangers, sans-serif;
    text-align: center;
    line-height: 36px;
    background-color: transparent;
    border: none;
    font-weight: 700 !important
}

.overlay-select {
    /*to remove the 8px margin */
    margin: 0 8px;
}

/* change the button mouse cursor */
.overlay button {
    cursor: pointer;
}

/* checkbox */
.overlay input[type="checkbox"] {
    position: relative;
    top: 4px;
    height: 36px;
    width: 30px;
    /* TODO: style checkbox*/
}

/* select */
.overlay select {
    position: relative;
    top: -8px;
    height: 36px;
    border-radius: 0%;
    /* TODO: style select*/
}

/* input containers */
.overlay-input {
    text-align: start;
}

.overlay button:hover {
    color: #f1f1f1
}

.overlay button:focus {
    outline: none;
    border: none
}

.overlay .close-button {
    position: absolute;
    top: 6px;
    right: 6px;
    font-size: 60px;
    font-family: Barlow, sans-serif;
    z-index: 1;
    -webkit-transition: opacity .4s linear;
    -o-transition: opacity .4s linear;
    transition: opacity .4s linear
}

.close-button.hidden {
    opacity: 0
}

.overlay-button {
    font-family: Bangers;
    color: black;
    position: absolute;
    padding: 0;
    outline: none;
    z-index: 2;
}

button.overlay-button {
    cursor: pointer;
}

/* the card button */
#card-overlay-button {
    right: 24px;
    bottom: 24px;
    background-color: #111;
    width: 84px !important;
    height: 120px;
    border-radius: 8px;
    font-family: Bangers, sans-serif;
    color: #fff;
    font-size: 60px;
    border: 6px solid #fff;
    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, .4);
}

#objective-overlay {
    left: 12px;
    bottom: 12px;
    background-color: transparent;
    margin: 0;
    font-size: 40px;
}

#menu-button {
    right: 12px;
    top: 12px;
    -webkit-text-stroke: 1px;
    font-size: 50px;
    background-color: transparent;
    border: none;
    margin: 0;
}

/* TODO: clean up */
.swiper-container {
    width: 100%;
    padding: 60px
}

.swiper-pagination {
    bottom: 0 !important
}

.swiper-pagination-bullet {
    width: 26px;
    height: 32px;
    text-align: center;
    line-height: 32px;
    font-size: 12px;
    color: red;
    opacity: .6;
    border-radius: 0;
    background-color: transparent;
    background-repeat: no-repeat;
    background-size: initial
}

.swiper-pagination-bullet-active {
    opacity: 1
}

.swiper-pagination-bullet.unsolvable {
    background-image: url(assets/img/unsolvable.svg);
    position: relative;
    top: 1px
}

.swiper-pagination-bullet.completed {
    background-image: url(assets/img/completed.svg);
    position: relative;
    top: -5px
}

.swiper-pagination-bullet.not-completed {
    background-image: url(assets/img/not-completed.svg);
    position: relative;
    top: 1px
}

.swiper-pagination-bullet.locked {
    background-image: url(assets/img/locked.svg);
    position: relative;
    left: 2px
}

.card-vertical {
    width: 240px;
    height: 370px;
}
.card-horizontal {
    height: 240px;
    width: 370px;
}

@media (min-width:768px) and (min-height:600px) {
    .card-vertical {
        width: 324px;
        height: 500px;
    }
    .card-horizontal {
        height: 324px;
        width: 500px;
    }
}

/* Text cards */
.text-card {
    font-family: Bangers, sans-serif;
    text-align: center;
    background: white;
}

/* Front */
.text-card.card-front h1 {
    position: relative;
    top: 30%;
    font-size: xx-large;
}

/* Back */
.text-card.card-back h1 {
    position: relative;
    top: 10%;
}

.text-card.card-back p {
    position: relative;
    top: 30%;
    font-size: x-large;
}

.card {
    -webkit-perspective: 1000px;
    perspective: 1000px;
    -webkit-transition: -webkit-transform 1s;
    transition: -webkit-transform 1s;
    -o-transition: transform 1s;
    transition: transform 1s;
    transition: transform 1s, -webkit-transform 1s;
    -webkit-transform-style: preserve-3d;
    transform-style: preserve-3d;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.card.flipped {
    -webkit-transform: rotateY(180deg);
    transform: rotateY(180deg);
    -ms-transform: rotateY(180deg);
}

.swiper-slide-active.current:not(.flipped) {
    cursor: pointer;
}

.card-inner {
    width: 100%;
    height: 100%;
    position: relative;
    -webkit-transition: -webkit-transform 1.5s;
    transition: -webkit-transform 1.5s;
    -o-transition: transform 1.5s;
    transition: transform 1.5s;
    transition: transform 1.5s, -webkit-transform 1.5s;
    -webkit-transform-style: preserve-3d;
    transform-style: preserve-3d
}

.card-face {
    height: 100%;
    width: 100%;
    position: absolute;
    border-radius: 25px;
    -webkit-box-shadow: 0 0 18px 0 rgba(0, 0, 0, .2);
    box-shadow: 0 0 18px 0 rgba(0, 0, 0, .2);
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden
}

.card-locked-overlay {
    height: 100%;
    width: 100%;
    background: #000 url(assets/img/locked.svg) no-repeat 50%;
    background-size: 10%;
    opacity: .95;
    border-radius: 24px;
    -webkit-transition: opacity .4s linear;
    -o-transition: opacity .4s linear;
    transition: opacity .4s linear;
    z-index: 1;
}

.card-solved-wrapper {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}

.card-solved {
    z-index: 2;
    content: url(assets/img/solved.png);
    height: auto;
    width: 90%;
    opacity: 0;
    -webkit-transform: rotate(15deg);
    -ms-transform: rotate(15deg);
    transform: rotate(15deg);
    animation-name: pulse;
    -webkit-animation-name: pulse;
    animation-duration: .5s;
    -webkit-animation-duration: .5s;
    animation-fill-mode: forwards;
    -webkit-animation-fill-mode: forwards;
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden
}

@keyframes pulse {
    0% {
     opacity:0;
     -webkit-transform:rotate(15deg);
     transform:rotate(15deg)
    }
    10% {
     opacity:.5;
     -webkit-transform-origin:50% 50%;
     transform-origin:50% 50%;
     -webkit-transform:rotate(13deg) scale(5);
     transform:rotate(13deg) scale(5);
     -webkit-transition:all .3s cubic-bezier(.6,.04,.98,.335);
     -o-transition:all .3s cubic-bezier(.6,.04,.98,.335);
     transition:all .3s cubic-bezier(.6,.04,.98,.335)
    }
    to {
     opacity:1;
     -webkit-transform:scale(1);
     transform:scale(1)
    }
   }
   @-webkit-keyframes pulse {
    0% {
     opacity:0;
     -webkit-transform:rotate(15deg);
     transform:rotate(15deg)
    }
    10% {
     opacity:.5;
     -webkit-transform-origin:50% 50%;
     transform-origin:50% 50%;
     -webkit-transform:rotate(13deg) scale(5);
     transform:rotate(13deg) scale(5);
     -webkit-transition:all .3s cubic-bezier(.6,.04,.98,.335);
     -o-transition:all .3s cubic-bezier(.6,.04,.98,.335);
     transition:all .3s cubic-bezier(.6,.04,.98,.335)
    }
    to {
     opacity:1;
     -webkit-transform:scale(1);
     transform:scale(1)
    }
   }

.card-back {
    -webkit-transform: rotateY(180deg);
    transform: rotateY(180deg)
}

@media (hover:none) and (pointer:coarse) {
    .leaflet-control-zoom, .mobile-hide {
        display: none;
    }
}

.leaflet-interactive {
    cursor: var(--marker-cursor, "inherit") !important;
}

.leaflet-marker-draggable {
    border-width: 2px;
}
.leaflet-edit-resize {
    border-radius: 100%;
}

